THRIFT-3797 Generated Delphi processor shouldn't error out on timed out exceptions Client: Delphi Patch: Kyle Johnson

This closes #994